# viralpulse

./: .env.example  .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-03-14-viralpulse-implementation.md  2026-03-17-save-posts.md  2026-03-17-smart-extraction.md
docs/superpowers/specs/: 2026-03-14-viralpulse-design.md  2026-03-17-save-posts-design.md  2026-03-17-smart-extraction-design.md  2026-03-17-telegram-bot-design.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
src/viralpulse/: __init__.py  api.py  auth.py  cli.py  config.py  crawler.py  db.py  models.py  platform_detect.py  query.py  s3.py  scoring.py  screenshot.py  telegram_bot.py
src/viralpulse/templates/: landing.html  onboarding.html  viral-writer.md
tests/: conftest.py  test_api.py  test_auth.py  test_crawler.py  test_e2e_save.py  test_models.py  test_platform_detect.py  test_platforms.py  test_query.py  test_s3.py  test_save_api.py  test_scoring.py
