[project]
name = "viralpulse"
version = "0.1.0"
description = "Viral social media post aggregator API for AI agents"
readme = "README.md"
authors = [
    { name = "Iris", email = "iris@viralpulse.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.70",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
viralpulse = "viralpulse.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
